# tank_recover

./: .gitignore  CMakeLists.txt  PC端《坦克大战》完整需求文档（Markdown版）.md  PC端《坦克大战》技术实现文档.md  README.md  build.bat  commit_msg.txt  organize_assets_final.py  package-lock.json  tankRecover.code-workspace  资源整理说明.md  项目进度计划表.md
.cursor/rules/: project.mdc
assets/: README.md
assets/audio/bgm/: README.txt
assets/audio/sfx/: README.txt
assets/levels/: level01.txt
assets/sprites/bullets/: README.txt
assets/sprites/effects/: README.txt
assets/sprites/enemy/: README.txt
assets/sprites/player/: README.txt
assets/sprites/powerups/: README.txt
assets/sprites/terrain/: README.txt
assets/sprites/ui/: README.txt
openspec/: project.md
openspec/changes/implement-enemy-spawning-terrain-generation/: ARCHIVE_SUMMARY.md  tasks.md
src/: main.cpp
src/ai/: AIController.cpp  AIController.h
src/audio/: AudioEngine.h
src/core/: Game.cpp  Game.h  Random.h  Timer.h
src/gameplay/: Bullet.cpp  Bullet.h  ClearEnemiesPowerUp.cpp  ClearEnemiesPowerUp.h  EnemyTank.cpp  EnemyTank.h  LifeBonusPowerUp.cpp  LifeBonusPowerUp.h  PlayerTank.cpp  PlayerTank.h  PowerUp.cpp  PowerUp.h  ShieldPowerUp.cpp  ShieldPowerUp.h  Tank.cpp  Tank.h  TankUpgradePowerUp.cpp  TankUpgradePowerUp.h  TimerBombPowerUp.cpp  TimerBombPowerUp.h
src/graphics/: Palette.h  Renderer.cpp  Renderer.h
src/input/: InputManager.cpp  InputManager.h
src/level/: LevelManager.cpp  LevelManager.h
src/ui/: HUD.cpp  HUD.h  UIManager.h
src/utils/: FileUtils.h  MathUtils.cpp  MathUtils.h
(+8 files in other folders)
